--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,14 @@
 	text-align: right;
 }
 
+.fixed {
+	position:sticky;
+	top:0;
+	left:0;
+	z-index:100;
+	width:100%;
+}
+
 #about-me-page{
 	padding:30px 0px 30px 0px;
 	width:100%;
